--- a/view/index.html
+++ b/view/index.html
@@ -1,11 +1,51 @@
 <!DOCTYPE html>
 <html lang="pl">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>pyszne.pl</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@600&display=swap" rel="stylesheet">
+   <link rel="stylesheet" href="../css/style.css">
+
 </head>
+
 <body>
-    
+    <h1 style="text-align: center;">
+        Pyszne Pl
+    </h1>
+    <div class="all-view" id="main-div">
+        <select name="pizza" id="pizza" class="margin-bottom">
+            <option value="0">-</option>
+            <option value="1">Margherita</option>
+            <option value="2">Pepperoni</option>
+            <option value="3">Wiejska</option>
+            <option value="4">Hawajska</option>
+        
+        </select>
+        <div>
+            <input type="checkbox" id="Pomidorowy" name="Pomidorowy">
+            <label for="pomidorowy">Pomidorowy</label>
+            <input type="checkbox" id="czosnkowy" name="czosnkowy">
+            <label for="czosnkowy">czosnkowy</label>
+            <input type="checkbox" id="ostry" name="ostry">
+            <label for="ostry">ostry</label>
+        </div>
+            <input type="text" name="nameC" placeholder="Podaj imię i nazwisko">
+            <br>
+            <input type="email" name="email" id="email" placeholder="Podaj email">
+            <br>
+            <input type="tel" name="tel" id="tel" placeholder="Podaj telefon">
+            <br>
+            <input type="text" name="address" id="address" placeholder="Podaj adres">
+            <br>
+            <textarea name="msg" id="msg" cols="30" rows="10" placeholder="wiadomość"></textarea>
+            <br>
+            <button class="btn margin-bottom" id="id-btn">Zamów</button>
+
+    </div>
+
+    <script src="../js/main.js"></script>
 </body>
+
 </html>
