--- a/view/index.html
+++ b/view/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>pyszne.pl</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@600&display=swap" rel="stylesheet">
-   <link rel="stylesheet" href="../css/style.css">
-
+    <title>Pyszne.pl</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,500;1,700&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
@@ -17,31 +17,32 @@
     <div class="all-view" id="main-div">
         <select name="pizza" id="pizza" class="margin-bottom">
             <option value="0">-</option>
-            <option value="1">Margherita</option>
-            <option value="2">Pepperoni</option>
+            <option value="1">Margarita</option>
+            <option value="2">Peperon</option>
             <option value="3">Wiejska</option>
             <option value="4">Hawajska</option>
-        
+
         </select>
         <div>
-            <input type="checkbox" id="Pomidorowy" name="Pomidorowy">
+            <input type="checkbox" id="pomidorowy" name="pomidorowy" class="margin-bottom sosy">
             <label for="pomidorowy">Pomidorowy</label>
-            <input type="checkbox" id="czosnkowy" name="czosnkowy">
-            <label for="czosnkowy">czosnkowy</label>
-            <input type="checkbox" id="ostry" name="ostry">
-            <label for="ostry">ostry</label>
+            <input type="checkbox" id="czosnkowy" name="czosnkowy" class="margin-bottom sosy">
+            <label for="czosnkowy">Czosnkowy</label>
+            <input type="checkbox" id="ostryPomidorowy" name="ostryPomidorowy" class="margin-bottom sosy">
+            <label for="ostryPomidorowy">Ostry Pomidorowy</label>
         </div>
-            <input type="text" name="nameC" placeholder="Podaj imię i nazwisko">
-            <br>
-            <input type="email" name="email" id="email" placeholder="Podaj email">
-            <br>
-            <input type="tel" name="tel" id="tel" placeholder="Podaj telefon">
-            <br>
-            <input type="text" name="address" id="address" placeholder="Podaj adres">
-            <br>
-            <textarea name="msg" id="msg" cols="30" rows="10" placeholder="wiadomość"></textarea>
-            <br>
-            <button class="btn margin-bottom" id="id-btn">Zamów</button>
+        <input type="text" name="nameC" class="margin-bottom" placeholder="Podaj imię i nazwisko">
+        <br>
+        <input type="email" name="email" class="margin-bottom" id="email" placeholder="Podaj emial">
+        <br>
+        <input type="tel" name="tel" class="margin-bottom" id="tel" placeholder="Podaj telefon">
+        <br>
+        <input type="text" name="adress" class="margin-bottom" id="adress" placeholder="Podaj adres">
+        <br>
+        <textarea name="msg" id="msg" cols="30" rows="10" class="margin-bottom"
+            placeholder="wiadomości dla kucharza"></textarea>
+        <br>
+        <button class="btn margin-bottom" id="id-btn">Zamów</button>
 
     </div>
 
