dodanie email, adres, telefo, sosy oraz napoje do order

--- a/view/index.html
+++ b/view/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="pl">
-
+    
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +9,6 @@
         rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
 </head>
-
 <body>
     <h1 style="text-align: center;">
         Pyszne Pl
@@ -21,7 +20,6 @@
             <option value="2">Peperon</option>
             <option value="3">Wiejska</option>
             <option value="4">Hawajska</option>
-
         </select>
         <div>
             <input type="checkbox" id="pomidorowy" name="pomidorowy" class="margin-bottom sosy">
@@ -30,8 +28,12 @@
             <label for="czosnkowy">Czosnkowy</label>
             <input type="checkbox" id="ostryPomidorowy" name="ostryPomidorowy" class="margin-bottom sosy">
             <label for="ostryPomidorowy">Ostry Pomidorowy</label>
+            <input type="checkbox" id="megaostryPomidorowy" name="megaostryPomidorowy" class="margin-bottom sosy">
+            <label for="ostryPomidorowy">Mega Ostry Pomidorowy</label>
+            <input type="checkbox" id="pietruszkowy" name="pietruszkowy" class="margin-bottom sosy">
+            <label for="ostryPomidorowy">pietruszkowy</label>
         </div>
-        <input type="text" name="nameC" class="margin-bottom" placeholder="Podaj imię i nazwisko">
+        <input type="text" name="nameC" class="margin-bottom" placeholder="Podaj imię i nazwisko" id="nameC">
         <br>
         <input type="email" name="email" class="margin-bottom" id="email" placeholder="Podaj emial">
         <br>
@@ -43,10 +45,11 @@
             placeholder="wiadomości dla kucharza"></textarea>
         <br>
         <button class="btn margin-bottom" id="id-btn">Zamów</button>
-
     </div>
-
+    <input type="checkbox" name="" class="napoje">
+    <label for="cocacola">coca-cola</label>
+    <input type="checkbox" name="" class="napoje">
+    <label for="fanta">fanta</label>
     <script src="../js/main.js"></script>
 </body>
-
 </html>
